media/css/mozorg/history-slides.less
/* ... */
/*--------------------------------------------------------------------------*/
// @Tablet Layout: 760px

@media only screen and (min-width: @breakTablet) and (max-width: @breakDesktop) {

    #masthead,
    .billboard,
    #history-slides,
    .page-head {
        width: @widthTablet - (@gridGutterWidth * 2);
        margin-left: auto;
        margin-right: auto;
    }

    .page-head .page-title {
        .font-size(48px);
    }

    .page-head .intro {
        margin: 0 auto 1.5em;
    }

    .links li {
        .span_narrow(4);
        min-height: 8em;
        margin-bottom: @baseLine;

        h4 {
            .font-size(20px);
        }
    }

}



/*--------------------------------------------------------------------------*/
// @Mobile Layout: 320px

@media only screen and (max-width: @breakTablet) {

    #masthead,
    .billboard,
    #history-slides,
    .page-head {
        width: @widthMobile;
        margin-left: auto;
        margin-right: auto;
    }

    .page-head .page-title {
        .font-size(32px);
    }

    .page-head .intro {
            margin: 0 0 1.5em;
    }

    .links li {
        width: auto;
        float: none;
        margin: 0 10px 1em;
        min-height: 0;

        &:nth-last-child(-n+3) {
            margin-bottom: @baseLine;
            padding-bottom: 10px;
            background: url(/media/img/mission/thin-stripe.png) center bottom repeat-x;
        }

        &:last-child {
            margin-bottom: 0;
            padding-bottom: 0;
            background: none;
        }
    }

}



/*--------------------------------------------------------------------------*/
// Minimal slide styling for small viewports; just fancy numbers

@media only screen and (max-width: @breakMobileLandscape) {

    #slideshow {
        .slide {
            padding: 10px 0;

            .number {
                background: #ccc none;
                border-radius: 25%;
                box-shadow: 0 5px 0 rgba(0,0,0,.08);
                color: #fff;
                .font-size(26px);
                font-weight: bold;
                height: auto;
                margin: 10px 15px 5px 0;
                padding: 5px 12px;
                text-align: center;
                text-indent: 0;
                width: auto;
            }
        }

        #fact01,
        #fact06,
        #fact11 {
            .number {
                background-color: #bf383e; /* red */
            }
        }

        #fact02,
        #fact07,
        #fact12 {
            .number {
                background-color: #1362ae; /* dark blue */
            }
        }

        #fact03,
        #fact08,
        #fact13 {
            .number {
                background-color: #86bb36; /* green */
            }
        }

        #fact04,
        #fact09,
        #fact14 {
            .number {
                background-color: #54a3dd; /* light blue */
            }
        }

        #fact05,
        #fact10,
        #fact15 {
            .number {
                background-color: #e26c33; /* orange */
            }
        }
    }

}



/*--------------------------------------------------------------------------*/
// Wide @Mobile Layout: 480px

@media only screen and (min-width: @breakMobileLandscape) and (max-width: @breakTablet) {

    #masthead,
    .billboard,
    #history-slides,
    .page-head {
        width: @widthMobileLandscape;
        margin-left: auto;
        margin-right: auto;
    }

    .page-head .page-title {
        .font-size(36px);
    }

}

